--- a/change background color/style.css
+++ b/change background color/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Tahoma, sans-serif;
     padding: 20px;
     background-color: darkseagreen;
-    transition: background-color 0.5s ease; /* ایجاد انیمیشن نرم برای تغییر رنگ */
+    transition: background-color 0.5s ease; 
 }
 
 .container {
